--- a/app/assets/javascripts/game.js.erb
+++ b/app/assets/javascripts/game.js.erb
@@ -1,10 +1,13 @@
 var game = new Phaser.Game(800,640,Phaser.AUTO, 'canvasDiv');
 
 //game.state.add('main', main);
+game.state.add('bootState', bootState);
 game.state.add('worldMap', worldMap);
+game.state.add('loseState', loseState);
 game.state.add('battleState', battleState);
 game.state.add('dungeonOneState', dungeonOneState);
 //game.state.add('dungeonTwoState', dungeonTwoState);
 //game.state.add('dungeonThreeState', dungeonThreeState);
 
+//game.state.start('bootState');
 game.state.start('worldMap');
