--- a/app/assets/javascripts/worldMap.js.erb
+++ b/app/assets/javascripts/worldMap.js.erb
@@ -75,6 +75,7 @@ var worldMap = {
 };
 
 var changeBattleState = function(enemySpawns, player){
+    game.cache.currentGameState = 'worldMap';
     game.state.start('battleState');
 }
 
