--- a/app/assets/javascripts/dungeonOneState.js.erb
+++ b/app/assets/javascripts/dungeonOneState.js.erb
@@ -72,6 +72,7 @@ var dungeonOneState = {
 };
 
 var changeBattleState = function(enemySpawns, player){
+    game.cache.currentGameState = 'dungeonOneState';
     game.state.start('battleState');
 }
 
