--- a/app/assets/javascripts/game.js.erb
+++ b/app/assets/javascripts/game.js.erb
@@ -1,4 +1,4 @@
-var game = new Phaser.Game(800,640,Phaser.AUTO, 'canvasDiv');
+var game = new Phaser.Game(800,640,Phaser.AUTO, 'gameCanvas');
 
 //game.state.add('main', main);
 game.state.add('bootState', bootState);
