--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#gameCanvas{
+  margin: auto;
+  width: 56%;
+  border: 3px solid white;
+  padding: 10px;
+}
+
+body{
+  font-family: Optima,Segoe,"Segoe UI",Candara,Calibri,Arial,sans-serif;
+  background-image: url(footer_lodyas.png);
+}
